<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="56dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/logo300x300"/>

    <Button
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <Button
        android:id="@+id/high_score_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/high_score_button"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/play_button"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quit_button"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/high_score_button"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

</android.support.constraint.ConstraintLayout>
